--- a/CyPerAna/configuration.yml
+++ b/CyPerAna/configuration.yml
@@ -1,4 +1,11 @@
-athlete-name: testName
-athlete-height: 185
-athlete-weight: 80
-last-update: today
+athlete:
+  testName:
+    height: 185
+    weight: 80
+    born: "1995-06-03"
+    last-update: "2020-12-27"
+  testName1:
+    height: 195
+    weight: 85
+    born: "1985-06-03"
+    last-update: "2020-12-27"
