--- a/CyPerAna/reader/configuration.yml
+++ b/CyPerAna/reader/configuration.yml
@@ -26,6 +26,15 @@ columns:
     30s:
     60s:
     300s:
+  torque:
+    raw:
+    1s:
+    3s:
+    5s:
+    10s:
+    30s:
+    60s:
+    300s:
   longitude:
   latitude:
   altitude:
